# tgif-brain.8825.systems

./: .replit  Procfile  README.md  auto_ingest.py  capability_map.json  jh_brain.db  jh_brain_mcp_server.py  jh_brain_mcp_server.py.bak  jh_brain_sse_server.py  jh_brain_sse_server_fixed.py  jh_brain_sse_server_minimal.py  jh_brain_state.db  main.py  mcp_wrapper.py  philosophy.py  preflight.py  requirements.txt  seed_db.py  server.py  session_state.py  start_server.sh  user_context.py
backend_8825/: .replit  BROADCAST.md  CHECKPOINT_VALIDATION.md  CONVERSATION_HUB_INTEGRATION.md  DEPLOYMENT_GUIDE.md  OBSERVABILITY.md  PORT_REGISTRY.md  README.md  REPLIT_DEPLOYMENT.md  SECURITY_PRIVACY.md  TESTING.md  TGIF_REPLIT_SETUP.md  __init__.py  __main__.py  conversation_hub_client.py  install_maestra_local.sh  models.py  observability.py  pyproject.toml  requirements.txt  server.py  test_smoke.py  tgif_brain_integration.py
backend_8825/maestra_backend.egg-info/: PKG-INFO  requires.txt  top_level.txt
