[project]
name = "maestra-backend"
version = "2.0.0"
description = "Unified HTTP service for Maestra across all surfaces"
authors = [{name = "8825 Team"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "slowapi==0.1.9",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["maestra_backend"]
